	(CygbuildMain): Under CYGBUILD_LIB, boot few variables.
	(CygbuildCmdInstallCheckPerlFile): Add cp -l check.
	(CygbuildCmdInstallCheckShellFiles): Activate function.
	Funtion was unused due to file name bug in for-loop.
	(CygbuildCmdInstallCheckPerlFile): Use relative filenames in
	messages.
	(CygbuildFindDo): New.
	(CygbuildBootVariablesGlobalMain): Adjust CYGBUILD_FIND_EXCLUDE.
	(CygbuildCmdInstallCheckInfoFiles): Add *.texi => *.info check.

2008-03-03  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalMain): Add
	VERSION file to variable cygbuild_opt_exclude_tmp_files.
	(CygbuildMakefilePrefixCheck): Adjust grep to find prefix=
	(CygbuildCmdFilesWrite): Fix variable name from 'to' to 'todir'.
	(CygbuildPatchList): Ignore */tmp/* directories.
	(CygbuildConfOptionAdjustment): Notify about --with and --without
	options in ./configure.
	(CygbuildCmdBuildStdMakefile): move set -x call.
	(CygbuildInstallFixEtcdirInstall): Add --quiet to egrep.
	(CygbuildBootVariablesGlobalCacheSet): Add
	CYGBUILD_CACHE_PERL_FILES.
	(CygbuildDefineGlobalPerl): New.
	(CygbuildDefineGlobalCommands): Define CYGPATH, CYGCHECK.
	(CygbuildPerlLibraryDependsGuess): New
	(CygbuildPerlLibraryDependsMain): Rewrite.
	(CygbuildPerlLibraryDependsCache): New. Use
	CYGBUILD_CACHE_PERL_FILES.
	(CygbuildPerlLibraryList): Improve regexp to ignore comment lines.

2008-03-02  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildIsMakefileCstandard): New.
	(CygbuildIsMakefileCstandard): Restore from revno:40a593c
	(CygbuildIsCplusplusPackage): Restore from revno:40a593c
	(CygbuildBootVariablesGlobalMain): Add perllocal.pod
	to variable CYGBUILD_TAR_EXCLUDE.
	(CygbuildCygcheckLibraryDepMain): Add prefix 'depends: '
	to all messages.

2008-03-01  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (dir): (CygbuildMakefileRunInstallCygwinOptions):
	Fix reading of variable makefile.
	(CygbuildMakefilePrefixCheck): Improve prefix check.